# ArduinoCore-API

./: CMakeLists.txt
api/: Common.h  Interrupts.h
